[Frontend] Fix unread message preview layout bugs
Both issues were introduced in 3411f8723c22be9026a3a279649f6ce7dbe7ee49;
while the first hunk's removed selector was not wrong at that time, it
also did no harm; the second hunk's removed selector never worked, the
new version both fixing the bug and adding some space between the
topmost preview and the heading.

--- a/src/static/room.css
+++ b/src/static/room.css
@@ -1069,7 +1069,7 @@ button.button-icon > img {
   display: -webkit-flex;
   display: flex;
 }
-.unread-message:not(.unread-message-hidden) {
+.unread-message {
   border-left: 2px solid transparent;
   padding-left: 2px;
 }
@@ -1088,7 +1088,7 @@ button.button-icon > img {
 .unread-message.unread-message-activity {
   border-color: #808080;
 }
-.replies > .unread-message-line:not(.unread-message-hidden) {
+.unread-message-line {
   margin-top: 2px;
 }
 
